fixed overlapping page images

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -511,6 +511,7 @@ Specific Pages
 
 .hr {
 	border: 3px solid #ebebeb;
+	clear: both;
 }
 
 /* Cases */
